cloud vps page eedit

--- a/cloud-vps-server.html
+++ b/cloud-vps-server.html
@@ -33,15 +33,15 @@
                         <h6 class="mm-title">Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
+                          <li><a href="cloud-Cloud-server.html">Saudi Arabia Linux Cloud Cloud Servers</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
                         <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                          <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
-                          <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
+                          <li><a href="cloud-Cloud-linux.html">Offshore Cloud Cloud Linux Hosting</a></li>
+                          <li><a href="cloud-Cloud-windows.html">Offshore Cloud Cloud Windows hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
@@ -106,9 +106,9 @@
     <div class="container">
       <div class="row justify-content-between align-items-center p-0 full-screen">
         <div class="col-lg-7 p-30px-tb">
-          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Prohost </span>Linux Cloud VPS Servers</div>
-          <h2 class="display-4 white-color m-25px-b">Powerfull and Secure Cloud VPS for Website</h2>
-          <p class="lead white-color-light">We Have the Features and Service You Deserve! Find the best packeges for you. Which is with High-performance Linux VPS for your Websites</p>
+          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Prohost </span>Linux Cloud Cloud Servers</div>
+          <h2 class="display-4 white-color m-25px-b">Powerfull and Secure Cloud Cloud for Website</h2>
+          <p class="lead white-color-light">We Have the Features and Service You Deserve! Find the best packeges for you. Which is with High-performance Linux Cloud for your Websites</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
         <div class="col-lg-5 text-center m-15px-tb"> <img src="images/desicated-server.png" class="max-width-150" title="" alt=""> </div>
@@ -124,7 +124,7 @@
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
-          <h3 class="display-4 m-25px-b font-alt">Why choose VPS Server</h3>
+          <h3 class="display-4 m-25px-b font-alt">Why choose Cloud Server</h3>
         </div>
       </div>
       <div class="row">
@@ -132,14 +132,14 @@
           <div class="p-25px-tb p-25px-lr hover-top hover-rotate white-bg text-center border-radius-5 card align-items-center">
             <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="fas fa-shield-alt white-color"></i> </div>
             <h5 class="h6 m-10px-b">Solid Security</h5>
-            <p class="m-0px">We harden each VPS by our security experts and guard with a security protocol tailored to your environment.</p>
+            <p class="m-0px">We harden each Cloud by our security experts and guard with a security protocol tailored to your environment.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 m-15px-tb">
           <div class="p-25px-tb p-25px-lr hover-top hover-rotate white-bg text-center border-radius-5 card align-items-center">
             <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="fas fa-edit white-color"></i> </div>
             <h5 class="h6 m-10px-b">Completely Customizable</h5>
-            <p class="m-0px">No matter your level of tech-savviness, your VPS comes customized. Choose your Operating System (Ubuntu, CentOS or Debian)</p>
+            <p class="m-0px">No matter your level of tech-savviness, your Cloud comes customized. Choose your Operating System (Ubuntu, CentOS or Debian)</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 m-15px-tb">
@@ -164,7 +164,7 @@
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
           <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Plans</h6>
-          <h3 class="display-4 m-25px-b font-alt">Featured VPS Servers</h3>
+          <h3 class="display-4 m-25px-b font-alt">Featured Cloud Servers</h3>
         </div>
       </div>
       <div class="row align-items-center">
@@ -307,7 +307,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-7 text-center text-lg-left m-15px-tb">
-          <h3 class="h1 white-color m-0px">All VPS Servers Plans come with 100% up time Guarantee</h3>
+          <h3 class="h1 white-color m-0px">All Cloud Servers Plans come with 100% up time Guarantee</h3>
         </div>
         <div class="col-lg-5 text-center text-lg-right m-15px-tb"> <a class="m-btn m-btn-white m-btn-radius m-btn-shadow" href="#plan">Get Started Now</a> </div>
       </div>
@@ -394,33 +394,33 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="accordion-close accordion-07">
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is VPS Hosting?</a>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is Cloud Hosting?</a>
               <div class="acco-des">
-                Virtual Private Server hosting, aka VPS hosting, is a website hosting environment that allows for resources such as RAM and CPU to be dedicated to your account. This is achieved by virtualizing a Dedicated server and splitting the resources amongst the users on that server.
+                Virtual Private Server hosting, aka Cloud hosting, is a website hosting environment that allows for resources such as RAM and CPU to be dedicated to your account. This is achieved by virtualizing a Dedicated server and splitting the resources amongst the users on that server.
               </div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What are VPS Hosting Benefits?</a>
-              <div class="acco-des">Users are guaranteed the resources on their VPS web hosting account. This means that your account will always be allocated the set amount of RAM, CPU and Disk Space you've chosen regardless of what other users on the server are doing. This allows for greater stability and performance of your website. You also do not share the Operating System with any other users, providing better security for your website files.
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What are Cloud Hosting Benefits?</a>
+              <div class="acco-des">Users are guaranteed the resources on their Cloud web hosting account. This means that your account will always be allocated the set amount of RAM, CPU and Disk Space you've chosen regardless of what other users on the server are doing. This allows for greater stability and performance of your website. You also do not share the Operating System with any other users, providing better security for your website files.
               </div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is the difference between Shared vs VPS Hosting?</a>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is the difference between Shared vs Cloud Hosting?</a>
               <div class="acco-des">
-                When it comes to Shared vs VPS Hosting, users of Shared Hosting all share the resources on the server their websites are on. There is no guarantee of RAM or CPU with Shared Hosting. But VPS hosting you have dedicated RAM and CPU.
+                When it comes to Shared vs Cloud Hosting, users of Shared Hosting all share the resources on the server their websites are on. There is no guarantee of RAM or CPU with Shared Hosting. But Cloud hosting you have dedicated RAM and CPU.
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="accordion-close accordion-07">
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> How do I get started with VPS Hosting?</a>
-              <div class="acco-des">Getting started with VPS hosting is easy with ProHost as your VPS hosting provider. Simply choose from our Standard, Enhanced, or Ultimate VPS hosting packages based on the amount of resources your website needs and follow the sign up instructions. Once you have an account, you can easily upgrade to more resources from within your customer dashboard.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> How do I get started with Cloud Hosting?</a>
+              <div class="acco-des">Getting started with Cloud hosting is easy with ProHost as your Cloud hosting provider. Simply choose from our Standard, Enhanced, or Ultimate Cloud hosting packages based on the amount of resources your website needs and follow the sign up instructions. Once you have an account, you can easily upgrade to more resources from within your customer dashboard.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is VPS hosting used for? </a>
-              <div class="acco-des">VPS Hosting is a powerful service that website owners can use to take control of their online presence. It's ideal for handling high traffic and offers the flexibility to customize server configurations to meet specific needs. Whether you're running a blog or a business website, VPS hosting can help you take your online presence to the next level.
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is Cloud hosting used for? </a>
+              <div class="acco-des">Cloud Hosting is a powerful service that website owners can use to take control of their online presence. It's ideal for handling high traffic and offers the flexibility to customize server configurations to meet specific needs. Whether you're running a blog or a business website, Cloud hosting can help you take your online presence to the next level.
               </div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I upgrade my VPS Hosting to a higher plan?</a>
-              <div class="acco-des">Yes, you can upgrade your VPS Hosting plan as your website grows and requires more resources. We offer easy upgrades, so you can scale up your hosting with just a few clicks. With the right ProHost plan, you can ensure that your website stays fast, reliable, and responsive as your audience grows.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I upgrade my Cloud Hosting to a higher plan?</a>
+              <div class="acco-des">Yes, you can upgrade your Cloud Hosting plan as your website grows and requires more resources. We offer easy upgrades, so you can scale up your hosting with just a few clicks. With the right ProHost plan, you can ensure that your website stays fast, reliable, and responsive as your audience grows.</div>
             </div>
           </div>
         </div>
@@ -454,9 +454,9 @@
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="fas fa-hdd"></i> </div>
-            <h5 class="m-10px-b">Cloud VPS</h5>
+            <h5 class="m-10px-b">Cloud Cloud</h5>
             <p class="m-0px">Use more resources at your request with exceptional services</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="cloud-vps-server.html">Learn More</a> </div>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="cloud-Cloud-server.html">Learn More</a> </div>
           </div>
         </div>
       </div>
@@ -485,7 +485,7 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
             <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
+            <li><a href="cloud-Cloud-server.html">Cloud Cloud Servers</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
