--- a/cloud-vps-server.html
+++ b/cloud-vps-server.html
@@ -163,7 +163,7 @@
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
-          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Plans</h6>
+          <h6 class="white-color m-15px-b dark-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Plans</h6>
           <h3 class="display-4 m-25px-b font-alt">Featured Cloud Servers</h3>
         </div>
       </div>
