--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
   </section>
 
 
-  <section class="section theme3rd-bg effect-section">
+  <section class="section dark-bg effect-section">
     <div class="container">
       <div class="row md-m-45px-b m-85px-b justify-content-center text-center">
         <div class="col-lg-12">
@@ -600,7 +600,7 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
             <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
+            <li><a href="cloud-vps-server.html">Cloud Servers</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
