footer andd some modification according to the buyer requirements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
+                <li><a href="windows-shared-hosting.html">Saudi Arabia Windows Shared Hosting</a></li>
                 <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
                 <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
 
@@ -600,7 +601,7 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
             <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud Servers</a></li>
+            <li><a href="cloud-vps-server.html">Cloud Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
@@ -631,7 +632,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
-          <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
+          <p class="m-0px font-small">© 2005-2023 copyright all right reserved || www.prohost.Sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
           <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966500211272"><i class="fab fa-whatsapp"></i></a> </div>
