--- a/shared-hosting.html
+++ b/shared-hosting.html
@@ -487,7 +487,7 @@
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="fas fa-hdd"></i> </div>
-            <h5 class="m-10px-b">Cloud VPS</h5>
+            <h5 class="m-10px-b">Cloud Server</h5>
             <p class="m-0px">Use more resources at your request with exceptional services</p>
             <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="cloud-vps-server.html">Learn More</a> </div>
           </div>
@@ -518,7 +518,7 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
             <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
+            <li><a href="cloud-vps-server.html">Cloud VPS Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
