--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
+                <li><a href="colocation.html">Colocation</a></li>
+
               </ul>
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud</a></li>
-                <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
-                <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
+                <li><a href="cloud-vps-server.html">Saudi Arabia Windows Cloud</a></li>
+                <li><a href="cloud-vps-linux.html">Offshore Cloud Linux Hosting</a></li>
+                <li><a href="cloud-vps-windows.html">Offshore Cloud Windows hosting</a></li>
 
               </ul>
             </li>
@@ -632,7 +634,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
-          <p class="m-0px font-small">© 2005-2023 copyright all right reserved || www.prohost.Sa</p>
+          <p class="m-0px font-small">© 2005-2023 copyright all right reserved || Prohost.sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
           <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966500211272"><i class="fab fa-whatsapp"></i></a> </div>
