fix header and footer

--- a/Microsoft-Office-365.html
+++ b/Microsoft-Office-365.html
@@ -24,43 +24,14 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
             </li>
-            <li class="nav-item mm-in px-mega"> <a class="nav-link" href="javascript:void(0)">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <div class="px-mega-menu mm-dorp-in">
-                <div class="row no-gutters">
-                  <div class="col-lg-12">
-                    <div class="row px-mm-right">
-                      <div class="col-lg-3">
-                        <h6 class="mm-title">Hosting</h6>
-                        <ul class="mm-link">
-                          <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
-                        </ul>
-                      </div>
-                      <div class="col-lg-3">
-                        <h6 class="mm-title">Offshore Hosting</h6>
-                        <ul class="mm-link">
-                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                          <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
-                          <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
-                        </ul>
-                      </div>
-                      <div class="col-lg-3">
-                        <h6 class="mm-title">Offshore Hosting</h6>
-                        <ul class="mm-link">
-                          <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
-                          <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
-                        </ul>
-                      </div>
-                      <div class="col-lg-3">
-                        <h6 class="mm-title">SQL Hosting</h6>
-                        <ul class="mm-link">
-                          <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
-                        </ul>
-                      </div>                       
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
+                <li><a href="windows-shared-hosting.html">Saudi Arabia Windows Shared Hosting</a></li>
+                <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
+                <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
+
+              </ul>
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Domain</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
@@ -73,23 +44,33 @@
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
+                <li><a href="colocation.html">Colocation</a></li>
+
+              </ul>
+            </li>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud</a></li>
+                <li><a href="cloud-vps-server.html">Saudi Arabia Windows Cloud</a></li>
+                <li><a href="cloud-vps-linux.html">Offshore Cloud Linux Hosting</a></li>
+                <li><a href="cloud-vps-windows.html">Offshore Cloud Windows hosting</a></li>
+
               </ul>
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="ssl.html">SSL</a></li>
                 <li><a href="search-engine-optimisation.html">SEO</a></li>
-                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="cyber-security.html">Cyber Secuirty</a></li>
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#"> Email & Collaboration</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Email</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="Microsoft-Office-365.html">Microsoft Office 365
                 </a></li>
                 <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="email-hosting.html">Email Hosting</a></li>
+                <li><a href="email-hosting.html">Exchange Email</a></li>
               </ul>
             </li>
           
@@ -909,7 +890,7 @@
             <h5 class="m-20px-b"> Connect with Prohost</h5>
             <p class="font-small m-0px"><b>Sales: </b>sales@prohost.sa</p><br>
             <p class="font-small m-0px"><b>Support: </b>support@prohost.sa</p> <br>
-            <p class="font-small m-0px"><b>Mobile: </b>+966550243031</p><br>
+            <p class="font-small m-0px"><b>Mobile: </b>+966500211272</p><br>
             <p class="font-small m-0px"><b>Phone: </b>8002472030</p>
           </div>
           
@@ -919,7 +900,7 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
             <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
+            <li><a href="cloud-vps-server.html">Cloud Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
@@ -950,10 +931,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
-          <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
+          <p class="m-0px font-small">© 2005-2023 copyright all right reserved || Prohost.sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
-          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966550243031"><i class="fab fa-whatsapp"></i></a> </div>
+          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966500211272"><i class="fab fa-whatsapp"></i></a> </div>
         </div>
       </div>
     </div>
