fix mobile responsive issues

--- a/domain-transfer.html
+++ b/domain-transfer.html
@@ -86,7 +86,7 @@
   <div class="shap-top-left opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
   <div class="shap-bottom-right opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
   <div class="container">
-    <div class="row align-items-center justify-content-center full-screen p-0">
+    <div class="row align-items-center justify-content-center full-screen p-100px-t">
       <div class="col-lg-5 m-30px-tb">
         <h1 class="white-color m-15px-b">Domain Transfer</h1>
         <p class="white-color">Use our special domain transfer offer and start using Hostinger today</p>
