--- a/reseller-hosting.html
+++ b/reseller-hosting.html
@@ -85,7 +85,7 @@
   <section id="home" class="effect-section theme-bg">
     <div id="particles-box" class="particles-box"></div>
     <div class="container">
-      <div class="row justify-content-between align-items-center p-0 full-screen">
+      <div class="row justify-content-between align-items-center  p-100px-t full-screen">
         <div class="col-lg-7 p-30px-tb">
           <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Prohost</span> reseller hosting</div>
           <h2 class="display-4 white-color m-25px-b">Make Money with your own Web Hosting Business</h2>
