--- a/domain-register.html
+++ b/domain-register.html
@@ -86,7 +86,7 @@
   <div class="shap-top-left opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
   <div class="shap-bottom-right opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
   <div class="container">
-    <div class="row align-items-center justify-content-center full-screen p-0">
+    <div class="row align-items-center justify-content-center full-screen  p-100px-t">
       <div class="col-lg-5 m-30px-tb">
         <h1 class="white-color m-15px-b">Start your domain name search</h1>
         <p class="white-color">ProHost simplifies the process of obtaining a domain name, ensuring an excellent start for your website. Benefit from affordable prices and unique features, setting the stage for online success.</p>
