fix cloud service issue,footer certificate

--- a/cloud-linux-hosting.html
+++ b/cloud-linux-hosting.html
@@ -50,10 +50,10 @@
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud</a></li>
-                <li><a href="cloud-vps-server.html">Saudi Arabia Windows Cloud</a></li>
-                <li><a href="cloud-vps-linux.html">Offshore Cloud Linux Hosting</a></li>
-                <li><a href="cloud-vps-windows.html">Offshore Cloud Windows hosting</a></li>
+                <li><a href="linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
+                <li><a href="windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
+                <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
+                <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
 
               </ul>
             </li>
@@ -87,9 +87,9 @@
     <div class="container">
       <div class="row justify-content-between align-items-center  p-100px-t full-screen">
         <div class="col-lg-7 p-30px-tb">
-          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Prohost </span>Linux Cloud VPS Servers</div>
+          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Prohost </span>Linux Cloud Servers</div>
           <h2 class="display-4 white-color m-25px-b">Powerful & Scalable Server with Complete Root Access</h2>
-          <p class="lead white-color-light">Pro Host VPS Hosting is powered by the commonly used software KVM and provides better performance, scalability, density, dynamic resource management, and ease of administration than the alternatives</p>
+          <p class="lead white-color-light">Pro Host Cloud Hosting is powered by the commonly used software KVM and provides better performance, scalability, density, dynamic resource management, and ease of administration than the alternatives</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
         <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting8.png" class="max-width-140" title="" alt=""> </div>
@@ -105,7 +105,7 @@
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
-          <h3 class="display-4 m-25px-b font-alt">Why choose VPS Server</h3>
+          <h3 class="display-4 m-25px-b font-alt">Why choose Cloud Server</h3>
         </div>
       </div>
       <div class="row">
@@ -145,7 +145,7 @@
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
           <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Plans</h6>
-          <h3 class="display-4 m-25px-b font-alt">Featured VPS Servers</h3>
+          <h3 class="display-4 m-25px-b font-alt">Featured Cloud Servers</h3>
         </div>
       </div>
       <div class="row align-items-center">
