--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud</a></li>
-                <li><a href="cloud-vps-server.html">Saudi Arabia Windows Cloud</a></li>
-                <li><a href="cloud-vps-linux.html">Offshore Cloud Linux Hosting</a></li>
-                <li><a href="cloud-vps-windows.html">Offshore Cloud Windows hosting</a></li>
+                <li><a href="linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
+                <li><a href="windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
+                <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
+                <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
 
               </ul>
             </li>
@@ -602,12 +602,13 @@
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
+            <li><a href="saudi-domain-registration.html"> Saudi Domain </a></li>
             <li><a href="cloud-vps-server.html">Cloud Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
         </div>
+        <!--
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Support</h5>
           <ul class="list-unstyled links-dark footer-link-2">
@@ -616,6 +617,16 @@
             <li><a href="https://my.prohost.sa/announcements">News</a></li>
             <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
             <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
+          </ul>
+        </div>-->
+        <div class="col-6 col-lg-2 m-15px-tb">
+          <h5 class="footer-title">More Links</h5>
+          <ul class="list-unstyled links-dark footer-link-2">
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Branches</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Our Profile</a></li>
+            <li><a href="#">Why Prohost?</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2 m-15px-tb">
@@ -630,7 +641,27 @@
       </div>
     </div>
   </div>
+  <!--certificet-->
   <div class="footer-bottom footer-border-dark position-relative">
+    <div class="container">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-6 col-lg-2 m-15px-tb">
+      
+      <img src="images/ISO-001-1-150x150.png" alt="">
+    </div>
+    <div class="col-6 col-lg-2 m-15px-tb">
+      <img src="images/ISO-005-1-150x150.png" alt="">
+    </div>
+    <div class="col-6 col-lg-2 m-15px-tb">
+      <img src="images/ISO-004-1-150x150.png" alt="">
+    </div>
+    <div class="col-6 col-lg-2 m-15px-tb">
+      <img src="images/ISO-003-1-150x150.png" alt="">
+    </div>
+  </div>
+</div>
+</div>
+  <div class="footer-bottom footer-border-dark position-relative theme-bg white-color ">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
