--- a/saudi-domain-registration.html
+++ b/saudi-domain-registration.html
@@ -51,10 +51,10 @@
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud</a></li>
-                <li><a href="cloud-vps-server.html">Saudi Arabia Windows Cloud</a></li>
-                <li><a href="cloud-vps-linux.html">Offshore Cloud Linux Hosting</a></li>
-                <li><a href="cloud-vps-windows.html">Offshore Cloud Windows hosting</a></li>
+                <li><a href="linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
+                <li><a href="windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
+                <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
+                <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
 
               </ul>
             </li>
